Solo se abrió para comparar

--- a/Notebooks/03ModelosPipelines/MLFlood/03Flood_RandomForestClassifiervs4_numnumPercentiles_yDestructionLevel.ipynb
+++ b/Notebooks/03ModelosPipelines/MLFlood/03Flood_RandomForestClassifiervs4_numnumPercentiles_yDestructionLevel.ipynb
@@ -5080,8 +5080,8 @@
     "plt.figure(figsize=(12, 6))\n",
     "plt.hist(df_flood['Dis Mag Value'], bins=len(value_counts_sorted), edgecolor='black', color='skyblue', alpha=0.7)\n",
     "plt.xlabel('Dis Mag Value')\n",
-    "plt.ylabel('Frequency')\n",
-    "plt.title('Distribution of Dis Mag Value')\n",
+    "plt.ylabel('Frecuencia')\n",
+    "plt.title('Distribución de Dis Mag Value')\n",
     "plt.xticks(rotation=90)\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
     "\n",
@@ -5113,17 +5113,17 @@
     "\n",
     "# Subplots\n",
     "fig, axes = plt.subplots(nrows=2, ncols=2, figsize=(15, 10))\n",
-    "fig.suptitle('Distribution of Dis Mag Value')\n",
+    "fig.suptitle('Distribución de Dis Mag Value')\n",
     "\n",
     "# Rangos de zoom para cada subplot\n",
     "zoom_ranges = [(0, 10000), (10001, 20000), (20001, 30000), (30001, 40000), (40001, 50000)]\n",
     "\n",
-    "# Plot each zoomed-in sector\n",
+    "# Sector segmentado por zoom\n",
     "for i, ax in enumerate(axes.flat):\n",
     "    lower_limit, upper_limit = zoom_ranges[i]\n",
     "    ax.hist(df_flood['Dis Mag Value'], bins=len(value_counts_sorted), edgecolor='black', color='skyblue', alpha=0.7)\n",
     "    ax.set_xlabel('Dis Mag Value')\n",
-    "    ax.set_ylabel('Frequency')\n",
+    "    ax.set_ylabel('Frecuencia')\n",
     "    ax.set_xlim(lower_limit, upper_limit)\n",
     "    ax.set_title(f'Dis Mag Value ({lower_limit}-{upper_limit})')\n",
     "    ax.grid(axis='y', linestyle='--', alpha=0.7)\n",
@@ -22381,14 +22381,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusiones de la versión 1 o Test A"
+    "# Conclusiones de la versión 4 o Test D"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sobre resultados del modelo y comparación con versión 2"
+    "## Sobre resultados del modelo y comparación con versión 4"
    ]
   },
   {
