--- a/Notebooks/03ModelosPipelines/MLFlood/03Flood_RandomForestClassifiervs4_numnumOrdinalEncoderPercentiles_yDestructionLevel.ipynb
+++ b/Notebooks/03ModelosPipelines/MLFlood/03Flood_RandomForestClassifiervs4_numnumOrdinalEncoderPercentiles_yDestructionLevel.ipynb
@@ -8880,7 +8880,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluación del modelo con mae, rmse y r2"
+    "## Evaluación de error del modelo con mae, rmse y r2"
    ]
   },
   {
@@ -8954,6 +8954,118 @@
     "\n",
     "Los valores bajos de MAE y RMSE indican que las predicciones del modelo están cerca de los valores objetivo reales, con solo pequeñas diferencias promedio.\n",
     "El valor alto de R^2 sugiere que el modelo explica una parte significativa de la varianza en la variable objetivo, lo que indica un buen ajuste a los datos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reporte de clasificación"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El informe de clasificación proporciona métricas de evaluación para el modelo RandomForestClassifier.\n",
+    "La precisión, el recuerdo (recall) y la puntuación F1 (f1-score) se informan para cada clase (1, 2, 3, 4), junto con el soporte (número de muestras) para cada clase.\n",
+    "También se informa la precisión del modelo: 1, lo que indica la corrección general de las predicciones.\n",
+    "Las métricas de macro avg o macropromedio y weighted avg o promedio ponderado proporcionan medidas de rendimiento agregadas en todas las clases."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reporte de clasificación:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         1.0       1.00      1.00      1.00        33\n",
+      "         2.0       1.00      1.00      1.00       114\n",
+      "         3.0       1.00      1.00      1.00        99\n",
+      "         4.0       1.00      1.00      1.00       110\n",
+      "\n",
+      "    accuracy                           1.00       356\n",
+      "   macro avg       1.00      1.00      1.00       356\n",
+      "weighted avg       1.00      1.00      1.00       356\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluar desempeño del dataset\n",
+    "print(\"Reporte de clasificación:\")\n",
+    "print(classification_report(y_pred, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### cross_validate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fit_time': array([0.16708708, 0.17334127, 0.15509701, 0.15601516, 0.17177916]),\n",
+       " 'score_time': array([0.00690365, 0.00699687, 0.00599647, 0.00735688, 0.00790429]),\n",
+       " 'test_neg_mean_absolute_error': array([-0.01403509, -0.01056338, -0.01408451, -0.01408451, -0.01056338]),\n",
+       " 'train_neg_mean_absolute_error': array([-0., -0., -0., -0., -0.]),\n",
+       " 'test_neg_mean_squared_error': array([-0.01403509, -0.01056338, -0.01408451, -0.01408451, -0.01056338]),\n",
+       " 'train_neg_mean_squared_error': array([-0., -0., -0., -0., -0.]),\n",
+       " 'test_r2': array([0.98674942, 0.99003975, 0.98671966, 0.9868628 , 0.99010258]),\n",
+       " 'train_r2': array([1., 1., 1., 1., 1.])}"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_results = cross_validate(pipeline, X_train, y_train, cv=5, scoring=['neg_mean_absolute_error', 'neg_mean_squared_error', 'r2'], return_train_score=True)\n",
+    "cv_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Interpretación de resultados de cross_validate:\n",
+    "\n",
+    "* fit_time: esta matriz contiene el tiempo necesario para ajustar el estimador (modelo) en cada pliegue de la validación cruzada. Los valores están en segundos.\n",
+    "\n",
+    "* score_time: esta matriz contiene el tiempo necesario para puntuar (evaluar) el estimador en cada pliegue de la validación cruzada. Los valores están en segundos.\n",
+    "\n",
+    "* test_neg_mean_absolute_error: esta matriz contiene el error absoluto medio (MAE) para cada pliegue de prueba. MAE mide la diferencia absoluta promedio entre los valores previstos y reales. Los valores son negativos porque scikit-learn multiplica la métrica por -1 para convertir las puntuaciones en problemas de maximización. Por lo tanto, los valores negativos más altos indican un mejor rendimiento.\n",
+    "\n",
+    "* train_neg_mean_absolute_error: Esta matriz contiene el MAE para cada pliegue del tren. Sin embargo, los valores son todos cero. Esto podría indicar que la canalización no devolvió ningún error de entrenamiento durante la validación cruzada, posiblemente debido a un ajuste perfecto o a un problema con los datos o la canalización.\n",
+    "\n",
+    "* test_neg_mean_squared_error: esta matriz contiene el error cuadrático medio (MSE) para cada pliegue de prueba. MSE mide la diferencia cuadrática promedio entre los valores predichos y reales. Los valores son negativos por la misma razón que el MAE.\n",
+    "\n",
+    "* train_neg_mean_squared_error: esta matriz contiene el MSE para cada pliegue del tren. Al igual que MAE, todos los valores son cero, lo que sugiere que la canalización no devolvió ningún error de entrenamiento durante la validación cruzada.\n",
+    "\n",
+    "* test_r2: esta matriz contiene el R-cuadrado (coeficiente de determinación) para cada pliegue de prueba. R-cuadrado mide qué tan bien los valores pronosticados coinciden con la varianza de los valores reales. Va de 0 a 1, donde 1 indica un ajuste perfecto. Los valores aquí están cerca de 1, lo que significa que el modelo se ha desempeñado muy bien en los datos de prueba.\n",
+    "\n",
+    "* train_r2: Esta matriz contiene el R-cuadrado para cada pliegue del tren. Al igual que con los otros puntajes de entrenamiento, todos los valores son cero, lo que indica que no hay errores de entrenamiento durante la validación cruzada."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En general, el modelo parece estar funcionando excepcionalmente bien, dados los altos valores de R-cuadrado y los errores medios absolutos y medios cuadráticos bajos. Sin embargo, los errores de entrenamiento cero son inusuales y pueden indicar un problema potencial con el pipeline o los datos."
    ]
   },
   {
@@ -9639,37 +9751,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusión del reporte de clasificación"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Interpretación:\n",
-    "El modelo funciona extremadamente bien en el conjunto de datos controlado, logrando una precisión, recall y f1-score perfectos para todas las clases. Esto indica que el modelo predijo con precisión todas las instancias de cada clase y no hubo predicciones falsas positivas o falsas negativas.\n",
-    "\n",
-    "Por otro lado, el rendimiento del modelo en el conjunto de datos de valores atípicos no es tan sólido. Predijo correctamente todas las instancias de la clase 3 (alta precisión, recall y f1-score), pero tuvo problemas con la clase 1 y no pudo hacer predicciones correctas. La puntuación F1 para la clase 2 es moderada, lo que indica un compromiso entre precisión y recuperación. En general, el modelo logró una precisión del 75 % en el conjunto de datos de valores atípicos.\n",
-    "\n",
-    "Es importante tener en cuenta que el tamaño pequeño del conjunto de datos puede afectar las métricas de evaluación. En escenarios del mundo real, es común tener conjuntos de datos desequilibrados, que pueden requerir técnicas adicionales como el aumento de datos o la ponderación de clases para abordar el desequilibrio y mejorar el rendimiento del modelo.\n",
-    "\n",
-    "En resumen, el modelo funciona excepcionalmente bien en el conjunto de datos controlado, pero muestra margen de mejora en el conjunto de datos de valores atípicos, especialmente para la clase 1. Es posible que se necesiten datos adicionales y ajustes del modelo para mejorar su rendimiento en el manejo de valores atípicos."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "El informe de clasificación proporciona métricas de evaluación para el modelo RandomForestClassifier.\n",
-    "La precisión, el recuerdo (recall) y la puntuación F1 (f1-score) se informan para cada clase (1, 2, 3, 4), junto con el soporte (número de muestras) para cada clase.\n",
-    "También se informa la precisión del modelo: 1, lo que indica la corrección general de las predicciones.\n",
-    "Las métricas de macro avg o macropromedio y weighted avg o promedio ponderado proporcionan medidas de rendimiento agregadas en todas las clases."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Tests con pruebas reduciendo columnas X"
    ]
   },
@@ -9760,18 +9841,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sobre resultados del modelo y comparación con versión 4"
+    "Las métricas de validación del modelo general y el Test A, controlado, sugieren colectivamente que el modelo tiene un alto nivel de precisión y capacidad predictiva para el conjunto de datos dado. Sin embargo, en el test B con outliers falla en predecir las clases bajas, debido posiblemente a una falta de datos en el dataset. Es precisamente en la clasificación low, detectada y probada donde se observan las mayores deficiencias, desempeñándose pobremente en Test C con valores bajos. \n",
+    "\n",
+    "siempre es una buena práctica realizar una validación cruzada del modelo y evaluar su rendimiento en datos ocultos para garantizar su capacidad de generalización."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "De acuerdo al reporte de clasificación, los resultados de la evaluación indican que el modelo RandomForestClassifier v1 tiene una alta precisión y funciona bien en la predicción del Nivel de Destrucción ('Destruction Level') en función de la mezcla de características dadas por Total Deaths, Total Affected, Total Damages Adj. Los valores pequeños de MAE y RMSE, así como la puntuación alta de R^2, demuestran la eficacia del modelo para capturar las relaciones entre las variables independientes y dependientes.\n",
+    "### Conclusión del reporte de clasificación de Tests A, B y C"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Interpretación comparada de tests A, B y C:\n",
+    "El modelo funciona extremadamente bien en el conjunto de datos controlado, logrando una precisión, recall y f1-score perfectos para todas las clases. Esto indica que el modelo predijo con precisión todas las instancias de cada clase y no hubo predicciones falsas positivas o falsas negativas.\n",
     "\n",
-    "Sin embargo, cabe recordar que en el test B o versión 2 se realizó un filtro previo para excluir los valores de 0 en columnas de Dis Mag Value, Total Deaths, Total Affected y Total Damages Adj, provocando que los resultados de densidad de los Niveles de Destrucción varíen mucho respecto a los del test A donde se conservaron valores íntegros, es decir, también se consideraron las filas con 0 que mostraban alguna relación o valor perteneciente a Filtro Flood.\n",
+    "Por otro lado, el rendimiento del modelo en el conjunto de datos de valores atípicos no es tan sólido. Predijo correctamente todas las instancias de la clase 3 (alta precisión, recall y f1-score), pero tuvo problemas con la clase 1 y no pudo hacer predicciones correctas. La puntuación F1 para la clase 2 es moderada, lo que indica un compromiso entre precisión y recuperación. En general, el modelo logró una precisión del 75 % en el conjunto de datos de valores atípicos.\n",
     "\n",
-    "El test A o versión 1 se desempeña mejor que test B o versión 2 en los resultados, aunque la duda de si deben conservarse los valores totales persiste."
+    "Es importante tener en cuenta que el tamaño pequeño del conjunto de datos puede afectar las métricas de evaluación. En escenarios del mundo real, es común tener conjuntos de datos desequilibrados, que pueden requerir técnicas adicionales como el aumento de datos o la ponderación de clases para abordar el desequilibrio y mejorar el rendimiento del modelo.\n",
+    "\n",
+    "En resumen, el modelo funciona excepcionalmente bien en el conjunto de datos controlado, pero muestra margen de mejora en el conjunto de datos de valores atípicos, especialmente para la clase 1. Es posible que se necesiten datos adicionales y ajustes del modelo para mejorar su rendimiento en el manejo de valores atípicos."
    ]
   },
   {
@@ -9785,17 +9878,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para mejorar el modelo, hay que buscar una solución o fórmula más fiable para definir los umbrales de Tipo de Inundación o Nivel de Destrucción, previos a implementar cualquier modelo, ya que, de momento, los rangos son un tanto indiscriminados, aunque se apoyan en la distribución entre todas las columnas de impacto.\n",
+    "Las métricas sugieren colectivamente que el modelo tiene un alto nivel de precisión y capacidad predictiva para el conjunto de datos dado. Sin embargo, siempre es una buena práctica realizar una validación cruzada del modelo y de los diferentes tests, así como evaluar su rendimiento en datos ocultos para garantizar su capacidad de generalización.\n",
     "\n",
-    "Puede ser que este modelo esté siendo sesgado en cuanto al reparto de Tipos de Inundación, ya que está considerando los 0 en nivel 1, produciendo un incremento en el Nivel de Destrucción para este tipo.\n",
-    "\n",
-    "Aunque en el desempeño parezca que el Test A funciona mejor, es más confiable excluir los valores 0 previamente, aunque se reduzca la muestra considerablemente.\n",
-    "\n",
-    "Si el 'Valor Dis Mag' de 0 indica datos faltantes o desconocidos, podría ser mejor excluir esas filas de la predicción del modelo. Al hacerlo, se asegura de que el modelo haga predicciones solo en función de datos significativos y confiables. Incluir filas con valores faltantes o desconocidos en la predicción puede generar ruido y afectar potencialmente la precisión de las predicciones del modelo.\n",
-    "\n",
-    "Por otro lado, el modelo también podría estar aprendendiendo de datos disponibles de otras columnas donde sí hay valores relacionados al evento Flood (recordemos que se realizó un filtro previo específico) aunque en 'Dis Mag Value' aparezca 0, y hacer predicciones en consecuencia.\n",
-    "\n",
-    "En resumen, la decisión de filtrar filas de manera segmentada con 'Dis Mag Value' u otras columnas pretende abordar el reto específico de nuestro dataset que es la inconsistencia de los mismos, debido a que no son fenómenos que ocurran de una forma constante ni ordenada, sino más bien aleatoria y dependiente de otros factores con los que no contamos, incluyendo muchos que no se recolectaron."
+    "Respecto a los rultados de classification report y cross_validate:\n",
+    "Es esencial investigar más a fondo el preprocesado, pipeline y sus componentes para garantizar que todo funcione según lo previsto. Además de considerar diferentes métricas de rendimiento y examinar las curvas de aprendizaje para obtener una visión completa del rendimiento del modelo."
    ]
   }
  ],
