--- a/Notebooks/03ModelosPipelines/MLFlood/03Flood_RandomForestClassifiervs4_numnumOrdinalEncoderPercentiles_yDestructionLevel.ipynb
+++ b/Notebooks/03ModelosPipelines/MLFlood/03Flood_RandomForestClassifiervs4_numnumOrdinalEncoderPercentiles_yDestructionLevel.ipynb
@@ -104,8 +104,8 @@
    "outputs": [],
    "source": [
     "# Display all rows and columns\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "pd.set_option('display.max_columns', None)"
+    "# pd.set_option('display.max_rows', None)\n",
+    "# pd.set_option('display.max_columns', None)"
    ]
   },
   {
