Se cambió un nombre a KNNeighbors

--- a/Notebooks/03ModelosPipelines/MLFlood/03Flood_ValidacionModelo_predictDestructionLevel.ipynb
+++ b/Notebooks/03ModelosPipelines/MLFlood/03Flood_ValidacionModelo_predictDestructionLevel.ipynb
@@ -2888,7 +2888,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SCORERS GradientBoostingClassifier"
+    "SCORERS KNeighborsClassifier"
    ]
   },
   {
