--- a/Notebooks/01LimpiarDatos/01_Ele_Drought_Coropletas.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ele_Drought_Coropletas.ipynb
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1585,7 +1585,7 @@
          }
         },
         "title": {
-         "text": "Número de sequías por países"
+         "text": "Frecuencia de sequías por países en el periodo 1900-2022"
         }
        }
       }
@@ -1600,7 +1600,7 @@
     "                    locations=\"Country\",\n",
     "                    color=\"Droughts\",\n",
     "                    color_continuous_scale=\"Reds\",\n",
-    "                    title=\"Número de sequías por países\")\n",
+    "                    title=\"Frecuencia de sequías por países en el periodo 1900-2022\")\n",
     "\n",
     "fig.show()"
    ]
@@ -1614,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3094,7 +3094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -8679,7 +8679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
