--- a/Notebooks/01LimpiarDatos/01_Ele_Earthquake_impacto.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ele_Earthquake_impacto.ipynb
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -863,48 +863,48 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Afghanistan</th>\n",
-       "      <td>12622</td>\n",
+       "      <th>China</th>\n",
+       "      <td>652549</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Albania</th>\n",
-       "      <td>626</td>\n",
+       "      <th>Haiti</th>\n",
+       "      <td>225170</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Algeria</th>\n",
-       "      <td>6771</td>\n",
+       "      <th>Indonesia</th>\n",
+       "      <td>203628</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>American Samoa</th>\n",
-       "      <td>34</td>\n",
+       "      <th>Japan</th>\n",
+       "      <td>188162</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Argentina</th>\n",
-       "      <td>10476</td>\n",
+       "      <th>Iran (Islamic Republic of)</th>\n",
+       "      <td>154277</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Venezuela (Bolivarian Republic of)</th>\n",
-       "      <td>423</td>\n",
+       "      <th>Barbados</th>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Wallis and Futuna</th>\n",
-       "      <td>5</td>\n",
+       "      <th>Timor-Leste</th>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Yemen</th>\n",
-       "      <td>10</td>\n",
+       "      <th>Guam</th>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Yemen Arab Rep</th>\n",
-       "      <td>2707</td>\n",
+       "      <th>Saint Lucia</th>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Yugoslavia</th>\n",
-       "      <td>1245</td>\n",
+       "      <th>Fiji</th>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -912,35 +912,35 @@
        "</div>"
       ],
       "text/plain": [
-       "                                    Total Deaths\n",
-       "Country                                         \n",
-       "Afghanistan                                12622\n",
-       "Albania                                      626\n",
-       "Algeria                                     6771\n",
-       "American Samoa                                34\n",
-       "Argentina                                  10476\n",
-       "...                                          ...\n",
-       "Venezuela (Bolivarian Republic of)           423\n",
-       "Wallis and Futuna                              5\n",
-       "Yemen                                         10\n",
-       "Yemen Arab Rep                              2707\n",
-       "Yugoslavia                                  1245\n",
+       "                            Total Deaths\n",
+       "Country                                 \n",
+       "China                             652549\n",
+       "Haiti                             225170\n",
+       "Indonesia                         203628\n",
+       "Japan                             188162\n",
+       "Iran (Islamic Republic of)        154277\n",
+       "...                                  ...\n",
+       "Barbados                               0\n",
+       "Timor-Leste                            0\n",
+       "Guam                                   0\n",
+       "Saint Lucia                            0\n",
+       "Fiji                                   0\n",
        "\n",
        "[125 rows x 1 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_earthquake.groupby('Country')['Total Deaths'].sum().to_frame()\n"
+    "df_earthquake.groupby('Country')['Total Deaths'].sum().sort_values(ascending=False).to_frame()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -973,20 +973,20 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Africa</th>\n",
-       "      <td>21585</td>\n",
+       "      <th>Asia</th>\n",
+       "      <td>1659098</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Americas</th>\n",
        "      <td>443261</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Asia</th>\n",
-       "      <td>1659098</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Europe</th>\n",
        "      <td>268126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Africa</th>\n",
+       "      <td>21585</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Oceania</th>\n",
@@ -999,20 +999,20 @@
       "text/plain": [
        "           Total Deaths\n",
        "Continent              \n",
-       "Africa            21585\n",
-       "Americas         443261\n",
        "Asia            1659098\n",
+       "Americas         443261\n",
        "Europe           268126\n",
+       "Africa            21585\n",
        "Oceania            6490"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = df_earthquake.groupby('Continent')['Total Deaths'].sum().to_frame()\n",
+    "a = df_earthquake.groupby('Continent')['Total Deaths'].sum().sort_values(ascending=False).to_frame()\n",
     "a"
    ]
   },
@@ -1547,61 +1547,61 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_10900\\453656539.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_23132\\453656539.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_earthquake['Latitude'] = df_earthquake['Latitude'].astype(str)\n",
-      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_10900\\453656539.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_23132\\453656539.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_earthquake['Longitude'] = df_earthquake['Longitude'].astype(str)\n",
-      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_10900\\453656539.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_23132\\453656539.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_earthquake['Latitude'] = df_earthquake['Latitude'].apply(lambda x: re.sub('[^\\d.-]', '', x.split('.', 1)[0]) if isinstance(x, str) else x)\n",
-      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_10900\\453656539.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_23132\\453656539.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_earthquake['Longitude'] = df_earthquake['Longitude'].apply(lambda x: re.sub('[^\\d.-]', '', x.split('.', 1)[0]) if isinstance(x, str) else x)\n",
-      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_10900\\453656539.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_23132\\453656539.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_earthquake['Latitude'] = df_earthquake['Latitude'].str.rstrip('.')\n",
-      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_10900\\453656539.py:11: SettingWithCopyWarning: \n",
+      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_23132\\453656539.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_earthquake['Longitude'] = df_earthquake['Longitude'].str.rstrip('.')\n",
-      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_10900\\453656539.py:14: SettingWithCopyWarning: \n",
+      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_23132\\453656539.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_earthquake['Latitude'] = df_earthquake['Latitude'].replace('', np.nan)\n",
-      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_10900\\453656539.py:15: SettingWithCopyWarning: \n",
+      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_23132\\453656539.py:15: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_earthquake['Longitude'] = df_earthquake['Longitude'].replace('', np.nan)\n",
-      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_10900\\453656539.py:18: SettingWithCopyWarning: \n",
+      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_23132\\453656539.py:18: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_earthquake['Latitude'] = df_earthquake['Latitude'].astype(float)\n",
-      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_10900\\453656539.py:19: SettingWithCopyWarning: \n",
+      "C:\\Users\\blanc\\AppData\\Local\\Temp\\ipykernel_23132\\453656539.py:19: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2306,7 +2306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2337,7 +2337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
